add pageview stats by country, device, browser, OS
